--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -13,13 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        java-version: [11,17]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK ${{ matrix.java-version }}
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: ${{ matrix.java-version }}
         distribution: 'adopt'
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
